unpackaged/main/default/objects/FPC_Lease_Reference__c/FPC_Lease_Reference__c.object-meta.xml
<CustomObject>
    <description>Reference information for customer.</description>
    <label>Lease Reference</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Lease Reference ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lease References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>