unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/ACCOUNT_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>ACCOUNT_NUMBER__c</fullName>
    <description>Customer's account number at their lease / loan reference</description>
    <inlineHelpText>Type in the customer's account number at their lease / loan reference.</inlineHelpText>
    <label>ACCOUNT_NUMBER</label>
    <length>32</length>
    <type>Text</type>
</CustomField>