unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/ACCOUNT_OPENED__c.field-meta.xml
<CustomField>
    <fullName>ACCOUNT_OPENED__c</fullName>
    <description>Date that the customer's bank account was opened.</description>
    <inlineHelpText>Type in the date that the customer's bank account was opened.</inlineHelpText>
    <label>ACCOUNT_OPENED</label>
    <type>DateTime</type>
</CustomField>