unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/BANK_NAME__c.field-meta.xml
<CustomField>
    <fullName>BANK_NAME__c</fullName>
    <description>Name of customer's Bank reference</description>
    <inlineHelpText>Type in the name of the customer's bank reference.</inlineHelpText>
    <label>BANK_NAME</label>
    <length>128</length>
    <type>Text</type>
</CustomField>