unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/BUSINESS_OR_PERSONAL__c.field-meta.xml
<CustomField>
    <fullName>BUSINESS_OR_PERSONAL__c</fullName>
    <description>Customer's bank account type</description>
    <inlineHelpText>Pick the customer's type of bank account.</inlineHelpText>
    <label>BUSINESS_OR_PERSONAL</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>