unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/CHECKING_OR_SAVINGS__c.field-meta.xml
<CustomField>
    <fullName>CHECKING_OR_SAVINGS__c</fullName>
    <description>Customer's bank account type</description>
    <inlineHelpText>Pick the customer's type of bank account.</inlineHelpText>
    <label>CHECKING_OR_SAVINGS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Checking</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>