unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/COMMENTS_2__c.field-meta.xml
<CustomField>
    <fullName>COMMENTS_2__c</fullName>
    <description>Comments about customer's bank reference.</description>
    <inlineHelpText>Type in comments about the customer's bank reference.</inlineHelpText>
    <label>COMMENTS_2</label>
    <length>16</length>
    <type>Text</type>
</CustomField>