unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/COMMENTS__c.field-meta.xml
<CustomField>
    <fullName>COMMENTS__c</fullName>
    <description>Comments about the customer's trade reference.</description>
    <inlineHelpText>Type in comments about the customer's trade reference.</inlineHelpText>
    <label>COMMENTS</label>
    <length>16</length>
    <type>Text</type>
</CustomField>