unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/COMPLETED_1__c.field-meta.xml
<CustomField>
    <fullName>COMPLETED_1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Completed status of customer's bank reference 1</description>
    <inlineHelpText>Check box if the customer's 1st bank reference has been completed.</inlineHelpText>
    <label>COMPLETED_1</label>
    <type>Checkbox</type>
</CustomField>