unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/COMPLETED_2__c.field-meta.xml
<CustomField>
    <fullName>COMPLETED_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Completed status of customer's bank reference 2</description>
    <inlineHelpText>Check box if the customer's 2nd bank reference has been completed.</inlineHelpText>
    <label>COMPLETED_2</label>
    <type>Checkbox</type>
</CustomField>