unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/COMPLETED__c.field-meta.xml
<CustomField>
    <fullName>COMPLETED__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Status of the customer's lease / loan references being checked.</description>
    <inlineHelpText>Check box if the customer's lease / loan reference has been checked and completed.</inlineHelpText>
    <label>COMPLETED</label>
    <type>Checkbox</type>
</CustomField>