unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/COMPLETED_DATE__c.field-meta.xml
<CustomField>
    <fullName>COMPLETED_DATE__c</fullName>
    <description>Date that the FPC Bank Info was completed is recorded.</description>
    <inlineHelpText>Date that the FPC Bank Info was completed is recorded.</inlineHelpText>
    <label>COMPLETED_DATE</label>
    <type>DateTime</type>
</CustomField>