unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/CONTACT_NAME__c.field-meta.xml
<CustomField>
    <fullName>CONTACT_NAME__c</fullName>
    <description>Contact at customer's contact at their bank reference</description>
    <inlineHelpText>Type in the name of the customer's contact at their bank reference.</inlineHelpText>
    <label>CONTACT_NAME</label>
    <length>64</length>
    <type>Text</type>
</CustomField>