unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/DATE_OPENED__c.field-meta.xml
<CustomField>
    <fullName>DATE_OPENED__c</fullName>
    <description>Date customer opened account with their trade reference.</description>
    <inlineHelpText>Type in the date that the customer opened their account with their trade reference.</inlineHelpText>
    <label>DATE_OPENED</label>
    <type>DateTime</type>
</CustomField>