unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/EMAIL__c.field-meta.xml
<CustomField>
    <fullName>EMAIL__c</fullName>
    <description>Email address of the customer's landlord</description>
    <inlineHelpText>Email address of the customer's landlord</inlineHelpText>
    <label>EMAIL</label>
    <length>32</length>
    <type>Text</type>
</CustomField>