unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/HIGH_CREDIT__c.field-meta.xml
<CustomField>
    <fullName>HIGH_CREDIT__c</fullName>
    <description>Customer's high credit with their trade reference.</description>
    <inlineHelpText>Type in the customer's high credit with their trade reference.</inlineHelpText>
    <label>HIGH_CREDIT</label>
    <length>32</length>
    <type>Text</type>
</CustomField>