unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/LANDLORD_COMPANY_NAME__c.field-meta.xml
<CustomField>
    <fullName>LANDLORD_COMPANY_NAME__c</fullName>
    <description>Company name of the customer's landlord</description>
    <inlineHelpText>Type in the company name of the customer's landlord.</inlineHelpText>
    <label>LANDLORD_COMPANY_NAME</label>
    <length>128</length>
    <type>Text</type>
</CustomField>