unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/LANDLORD_CONTACT_NAME__c.field-meta.xml
<CustomField>
    <fullName>LANDLORD_CONTACT_NAME__c</fullName>
    <description>Contact name at the customer's landlord</description>
    <inlineHelpText>Type in the name of the customer's contact with their landlord.</inlineHelpText>
    <label>LANDLORD_CONTACT_NAME</label>
    <length>64</length>
    <type>Text</type>
</CustomField>