unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/LANDLORD_EMAIL_ADDRESS__c.field-meta.xml
<CustomField>
    <fullName>LANDLORD_EMAIL_ADDRESS__c</fullName>
    <description>Email address of the customer's landlord</description>
    <inlineHelpText>Type in the email address of the customer's landlord.</inlineHelpText>
    <label>LANDLORD_EMAIL_ADDRESS</label>
    <length>128</length>
    <type>Text</type>
</CustomField>