unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/LEASE_TERM__c.field-meta.xml
<CustomField>
    <fullName>LEASE_TERM__c</fullName>
    <description>Customer's lease term with their landlord</description>
    <inlineHelpText>Type in the customer's lease term with their landlord.</inlineHelpText>
    <label>LEASE_TERM</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>