unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/LENDER__c.field-meta.xml
<CustomField>
    <fullName>LENDER__c</fullName>
    <description>Lender who is customer's lease / loan reference.</description>
    <inlineHelpText>Type in the lender who is the customer's lease / loan reference.</inlineHelpText>
    <label>LENDER</label>
    <length>64</length>
    <type>Text</type>
</CustomField>