unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/LOAN_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>LOAN_AMOUNT__c</fullName>
    <description>Customer's lease / loan amount with their lease / loan reference.</description>
    <inlineHelpText>Type in the customer's lease / loan amount ithe their lease / loan reference.</inlineHelpText>
    <label>LOAN_AMOUNT</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>