unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/LOAN_OPEN__c.field-meta.xml
<CustomField>
    <fullName>LOAN_OPEN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Loan open status</description>
    <inlineHelpText>Check the box if the customer has a loan open with their bank.</inlineHelpText>
    <label>LOAN_OPEN</label>
    <type>Checkbox</type>
</CustomField>