unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/Location_Lease_Date__c.field-meta.xml
<CustomField>
    <fullName>Location_Lease_Date__c</fullName>
    <description>Location description</description>
    <inlineHelpText>Pick the type of location that the customer operates from.</inlineHelpText>
    <label>Location Lease Date</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Physical</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Equipment Location</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Retail 1</fullName>
            </value>
            <value>
                <fullName>Retail 2</fullName>
            </value>
            <value>
                <fullName>Retail 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>