unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/MONTHLY_PAYMENT__c.field-meta.xml
<CustomField>
    <fullName>MONTHLY_PAYMENT__c</fullName>
    <description>Monthly payment</description>
    <inlineHelpText>Type in the customer's monthly payment amount.</inlineHelpText>
    <label>MONTHLY_PAYMENT</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>