unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/NAME__c.field-meta.xml
<CustomField>
    <fullName>NAME__c</fullName>
    <description>Name of customer's Lease / Loan reference</description>
    <inlineHelpText>Type in the name of the customer's lease / loan reference.</inlineHelpText>
    <label>NAME</label>
    <length>64</length>
    <type>Text</type>
</CustomField>