unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/NAME_OF_PG__c.field-meta.xml
<CustomField>
    <fullName>NAME_OF_PG__c</fullName>
    <description>Name of the Personal Guarantor</description>
    <inlineHelpText>Type in the name of the personal guarantor.</inlineHelpText>
    <label>NAME_OF_PG</label>
    <length>64</length>
    <type>Text</type>
</CustomField>