unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/NAME_ON_ACCOUNT__c.field-meta.xml
<CustomField>
    <fullName>NAME_ON_ACCOUNT__c</fullName>
    <description>Name on the account of the customer's bank reference.</description>
    <inlineHelpText>Type in the name on the account of the customer's bank reference.</inlineHelpText>
    <label>NAME_ON_ACCOUNT</label>
    <length>64</length>
    <type>Text</type>
</CustomField>