unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/NOTES__c.field-meta.xml
<CustomField>
    <fullName>NOTES__c</fullName>
    <description>Notes</description>
    <inlineHelpText>Type in notes about the customers lease / loan reference.</inlineHelpText>
    <label>NOTES</label>
    <length>16</length>
    <type>Text</type>
</CustomField>