unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/OPENING_DATE__c.field-meta.xml
<CustomField>
    <fullName>OPENING_DATE__c</fullName>
    <description>Opening date of the customer's bank account.</description>
    <inlineHelpText>Type in the opening date of the customer's bank account.</inlineHelpText>
    <label>OPENING_DATE</label>
    <length>32</length>
    <type>Text</type>
</CustomField>