unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/ORIGINAL_BALANCE__c.field-meta.xml
<CustomField>
    <fullName>ORIGINAL_BALANCE__c</fullName>
    <description>Original balance in the customer's bank account.</description>
    <inlineHelpText>Type in the original balance in the customer's bank account.</inlineHelpText>
    <label>ORIGINAL_BALANCE</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>