unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/PAY_AS_AGREED__c.field-meta.xml
<CustomField>
    <fullName>PAY_AS_AGREED__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Paid as agreed.</description>
    <inlineHelpText>Check box if the customer's lease / loan reference indicated that the customer paid as agreed.</inlineHelpText>
    <label>PAY_AS_AGREED</label>
    <type>Checkbox</type>
</CustomField>