unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/PAYMENTS__c.field-meta.xml
<CustomField>
    <fullName>PAYMENTS__c</fullName>
    <description>Customer's loan payments to their bank</description>
    <inlineHelpText>Type in the amount of the customer's loan payment to their bank.</inlineHelpText>
    <label>PAYMENTS</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>