unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/PERSONALLY_GUARANTEED__c.field-meta.xml
<CustomField>
    <fullName>PERSONALLY_GUARANTEED__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Personal gurantee status of customer's lease / loan reference.</description>
    <inlineHelpText>Check the box if the customer's lease / loan reference was personally guaranteed.</inlineHelpText>
    <label>PERSONALLY_GUARANTEED</label>
    <type>Checkbox</type>
</CustomField>