unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/PHONE_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>PHONE_NUMBER__c</fullName>
    <description>Phone number for the customer's lease / loan reference.</description>
    <inlineHelpText>Type in the phone number for the customer's lease / loan reference.</inlineHelpText>
    <label>PHONE_NUMBER</label>
    <length>16</length>
    <type>Text</type>
</CustomField>