unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/RATING_TYPE__c.field-meta.xml
<CustomField>
    <fullName>RATING_TYPE__c</fullName>
    <description>Customer's bank rating</description>
    <inlineHelpText>Pick the customer's bank rating.</inlineHelpText>
    <label>RATING_TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low 1</fullName>
            </value>
            <value>
                <fullName>Low 2</fullName>
            </value>
            <value>
                <fullName>Low 3</fullName>
            </value>
            <value>
                <fullName>Low 4</fullName>
            </value>
            <value>
                <fullName>Low 5</fullName>
            </value>
            <value>
                <fullName>Low 6</fullName>
            </value>
            <value>
                <fullName>Low 7</fullName>
            </value>
            <value>
                <fullName>Med 1</fullName>
            </value>
            <value>
                <fullName>Med 2</fullName>
            </value>
            <value>
                <fullName>Med 3</fullName>
            </value>
            <value>
                <fullName>Med 4</fullName>
            </value>
            <value>
                <fullName>Med 5</fullName>
            </value>
            <value>
                <fullName>Med 6</fullName>
            </value>
            <value>
                <fullName>Med 7</fullName>
            </value>
            <value>
                <fullName>Mid 1</fullName>
            </value>
            <value>
                <fullName>Mid 2</fullName>
            </value>
            <value>
                <fullName>Mid 3</fullName>
            </value>
            <value>
                <fullName>Mid 4</fullName>
            </value>
            <value>
                <fullName>Mid 5</fullName>
            </value>
            <value>
                <fullName>Mid 6</fullName>
            </value>
            <value>
                <fullName>Mid 7</fullName>
            </value>
            <value>
                <fullName>High 1</fullName>
            </value>
            <value>
                <fullName>High 2</fullName>
            </value>
            <value>
                <fullName>High 3</fullName>
            </value>
            <value>
                <fullName>High 4</fullName>
            </value>
            <value>
                <fullName>High 5</fullName>
            </value>
            <value>
                <fullName>High 6</fullName>
            </value>
            <value>
                <fullName>High 7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>