unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/SATISFACTORY__c.field-meta.xml
<CustomField>
    <fullName>SATISFACTORY__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Satisfactory landlord reference - status</description>
    <inlineHelpText>Check box if landlord provided customer with a satisfactory landlord reference.</inlineHelpText>
    <label>SATISFACTORY</label>
    <type>Checkbox</type>
</CustomField>