unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/SECURED_PG__c.field-meta.xml
<CustomField>
    <fullName>SECURED_PG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Status account being secured by a personal guarantee.</description>
    <inlineHelpText>Check the box if the customer's bank account is secured with a personal guarantee.</inlineHelpText>
    <label>SECURED_PG</label>
    <type>Checkbox</type>
</CustomField>