unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/SERVICES_PROVIDED__c.field-meta.xml
<CustomField>
    <fullName>SERVICES_PROVIDED__c</fullName>
    <description>Service Provided</description>
    <inlineHelpText>Service Provided</inlineHelpText>
    <label>SERVICES_PROVIDED</label>
    <length>64</length>
    <type>Text</type>
</CustomField>