unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/TERM__c.field-meta.xml
<CustomField>
    <fullName>TERM__c</fullName>
    <description>Term of the customer's loan with their bank reference.</description>
    <inlineHelpText>Type in the term of the customer's loan with their bank reference.</inlineHelpText>
    <label>TERM</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>