unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/TERMS_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>TERMS_AMOUNT__c</fullName>
    <description>Term amounts of the customer's lease / loan reference.</description>
    <inlineHelpText>Type in the term amounts of the customer's lease / loan reference.</inlineHelpText>
    <label>TERMS_AMOUNT</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>