unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/TERMS_MONTHS__c.field-meta.xml
<CustomField>
    <fullName>TERMS_MONTHS__c</fullName>
    <description>Term in months of the customer's account with their lease / loan reference.</description>
    <inlineHelpText>Type in the term in months fo the customer's account with their lease / loan reference.</inlineHelpText>
    <label>TERMS_MONTHS</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>