unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/TRADE_NAME__c.field-meta.xml
<CustomField>
    <fullName>TRADE_NAME__c</fullName>
    <description>Name of customer's trade reference.</description>
    <inlineHelpText>Type in the name of the customer's trade reference.</inlineHelpText>
    <label>TRADE_NAME</label>
    <length>64</length>
    <type>Text</type>
</CustomField>