unpackaged/main/default/objects/FPC_Lease_Reference__c/fields/TYPE__c.field-meta.xml
<CustomField>
    <fullName>TYPE__c</fullName>
    <description>ID of FPC Lease Loan for custom object lookups.</description>
    <inlineHelpText>ID of FPC Lease Loan for custom object lookups.</inlineHelpText>
    <label>TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Trade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>